--- a/arch/arm/configs/cyanogenmod_i9500_defconfig
+++ b/arch/arm/configs/cyanogenmod_i9500_defconfig
@@ -18,7 +18,7 @@ CONFIG_TRACE_IRQFLAGS_SUPPORT=y
 CONFIG_HARDIRQS_SW_RESEND=y
 CONFIG_GENERIC_IRQ_PROBE=y
 CONFIG_GENERIC_LOCKBREAK=y
-CONFIG_RWSEM_GENERIC_SPINLOCK=y
+CONFIG_RWSEM_XCHGADD_ALGORITHM=y
 CONFIG_ARCH_HAS_CPUFREQ=y
 CONFIG_ARCH_HAS_CPU_IDLE_WAIT=y
 CONFIG_GENERIC_HWEIGHT=y
@@ -150,6 +150,7 @@ CONFIG_SLUB=y
 # CONFIG_PROFILING is not set
 CONFIG_TRACEPOINTS=y
 CONFIG_HAVE_OPROFILE=y
+# CONFIG_KPROBES is not set
 CONFIG_JUMP_LABEL=y
 CONFIG_HAVE_KPROBES=y
 CONFIG_HAVE_KRETPROBES=y
@@ -164,10 +165,13 @@ CONFIG_HAVE_ARCH_JUMP_LABEL=y
 #
 # CONFIG_GCOV_KERNEL is not set
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
-CONFIG_SLABINFO=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 CONFIG_MODULES=y
+# CONFIG_MODULE_FORCE_LOAD is not set
+# CONFIG_MODULE_UNLOAD is not set
+# CONFIG_MODVERSIONS is not set
+# CONFIG_MODULE_SRCVERSION_ALL is not set
 CONFIG_STOP_MACHINE=y
 CONFIG_BLOCK=y
 CONFIG_LBDAF=y
@@ -202,11 +206,13 @@ CONFIG_EFI_PARTITION=y
 #
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
 # CONFIG_DEFAULT_DEADLINE is not set
+CONFIG_DEFAULT_ROW=y
 # CONFIG_DEFAULT_CFQ is not set
-CONFIG_DEFAULT_NOOP=y
-CONFIG_DEFAULT_IOSCHED="noop"
+# CONFIG_DEFAULT_NOOP is not set
+CONFIG_DEFAULT_IOSCHED="row"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
@@ -235,7 +241,7 @@ CONFIG_UNINLINE_SPIN_UNLOCK=y
 # CONFIG_INLINE_WRITE_UNLOCK_BH is not set
 # CONFIG_INLINE_WRITE_UNLOCK_IRQ is not set
 # CONFIG_INLINE_WRITE_UNLOCK_IRQRESTORE is not set
-# CONFIG_MUTEX_SPIN_ON_OWNER is not set
+CONFIG_MUTEX_SPIN_ON_OWNER=y
 CONFIG_FREEZER=y
 
 #
@@ -519,6 +525,7 @@ CONFIG_USE_NFC_IRQ_REV01=y
 # CONFIG_CORESIGHT_ETM is not set
 # CONFIG_SEC_TSP_FACTORY is not set
 # CONFIG_SAMSUNG_PRODUCT_SHIP is not set
+# CONFIG_USER_RESET_DEBUG is not set
 
 #
 # Processor Type
@@ -625,7 +632,7 @@ CONFIG_FLATMEM=y
 CONFIG_FLAT_NODE_MEM_MAP=y
 CONFIG_HAVE_MEMBLOCK=y
 CONFIG_PAGEFLAGS_EXTENDED=y
-CONFIG_SPLIT_PTLOCK_CPUS=999999
+CONFIG_SPLIT_PTLOCK_CPUS=4
 CONFIG_COMPACTION=y
 CONFIG_MIGRATION=y
 # CONFIG_PHYS_ADDR_T_64BIT is not set
@@ -816,7 +823,6 @@ CONFIG_IPV6_TUNNEL=y
 CONFIG_IPV6_MULTIPLE_TABLES=y
 # CONFIG_IPV6_SUBTREES is not set
 # CONFIG_IPV6_MROUTE is not set
-# CONFIG_NETLABEL is not set
 CONFIG_ANDROID_PARANOID_NETWORK=y
 CONFIG_NET_ACTIVITY_STATS=y
 CONFIG_NETWORK_SECMARK=y
@@ -975,7 +981,6 @@ CONFIG_IP_NF_MANGLE=y
 # CONFIG_IP_NF_TARGET_ECN is not set
 # CONFIG_IP_NF_TARGET_TTL is not set
 CONFIG_IP_NF_RAW=y
-CONFIG_IP_NF_SECURITY=y
 CONFIG_IP_NF_ARPTABLES=y
 CONFIG_IP_NF_ARPFILTER=y
 CONFIG_IP_NF_ARP_MANGLE=y
@@ -1002,7 +1007,6 @@ CONFIG_IP6_NF_TARGET_REJECT=y
 CONFIG_IP6_NF_TARGET_REJECT_SKERR=y
 CONFIG_IP6_NF_MANGLE=y
 CONFIG_IP6_NF_RAW=y
-# CONFIG_IP6_NF_SECURITY is not set
 # CONFIG_IP_DCCP is not set
 # CONFIG_IP_SCTP is not set
 # CONFIG_RDS is not set
@@ -1092,6 +1096,7 @@ CONFIG_XPS=y
 # CONFIG_NETPRIO_CGROUP is not set
 CONFIG_BQL=y
 CONFIG_HAVE_BPF_JIT=y
+# CONFIG_BPF_JIT is not set
 
 #
 # Network testing
@@ -1304,6 +1309,7 @@ CONFIG_SCSI_MULTI_LUN=y
 # CONFIG_SCSI_CONSTANTS is not set
 # CONFIG_SCSI_LOGGING is not set
 # CONFIG_SCSI_SCAN_ASYNC is not set
+CONFIG_SCSI_WAIT_SCAN=m
 
 #
 # SCSI Transports
@@ -1425,12 +1431,15 @@ CONFIG_WIFI_CONTROL_FUNC=y
 # CONFIG_BCM4330 is not set
 # CONFIG_BCM4334 is not set
 CONFIG_BCM4335=y
+# CONFIG_BCM4339 is not set
 # CONFIG_BCM43241 is not set
 CONFIG_BCMDHD_FW_PATH="/system/etc/wifi/bcmdhd_sta.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/nvram_net.txt"
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
 CONFIG_BCM4335BT=y
+# CONFIG_WIFI_BROADCOM_COB is not set
 CONFIG_WLAN_REGION_CODE=100
+CONFIG_WLAIBSS=y
 # CONFIG_BRCMFMAC is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_IWM is not set
@@ -1686,6 +1695,7 @@ CONFIG_I2C_EXYNOS5=y
 #
 # Other I2C/SMBus bus drivers
 #
+# CONFIG_I2C_STUB is not set
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
 # CONFIG_I2C_DEBUG_BUS is not set
@@ -1769,6 +1779,7 @@ CONFIG_GPIO_ARIZONA=y
 #
 # MODULbus GPIO expanders:
 #
+# CONFIG_SEC_GPIO_DVS is not set
 # CONFIG_W1 is not set
 CONFIG_POWER_SUPPLY=y
 # CONFIG_POWER_SUPPLY_DEBUG is not set
@@ -1939,6 +1950,7 @@ CONFIG_IR_LIRC_CODEC=y
 # CONFIG_IR_STREAMZAP is not set
 # CONFIG_RC_LOOPBACK is not set
 # CONFIG_IR_GPIO_CIR is not set
+# CONFIG_MEDIA_ATTACH is not set
 CONFIG_MEDIA_TUNER=y
 # CONFIG_MEDIA_TUNER_CUSTOMISE is not set
 CONFIG_MEDIA_TUNER_SIMPLE=y
@@ -2097,6 +2109,7 @@ CONFIG_VIDEO_EXYNOS_JPEG=y
 CONFIG_VIDEO_EXYNOS_JPEG_HX=y
 CONFIG_VIDEO_EXYNOS_FIMG2D=y
 CONFIG_VIDEO_EXYNOS_MFC=y
+CONFIG_MFC_USE_SECURE_NODE=y
 CONFIG_EXYNOS_MFC_V6=y
 
 #
@@ -2157,6 +2170,11 @@ CONFIG_ION_EXYNOS_DRM_MEMSIZE_FIMD_VIDEO=49152
 CONFIG_ION_EXYNOS_DRM_MEMSIZE_MFC_OUTPUT=60416
 CONFIG_ION_EXYNOS_DRM_MEMSIZE_MFC_INPUT=16384
 CONFIG_ION_EXYNOS_DRM_MEMSIZE_G2D_WFD=8192
+
+#
+# ARM GPU Configuration
+#
+# CONFIG_MALI_T6XX is not set
 CONFIG_PVR_SGX=y
 CONFIG_PVR_BUILD_RELEASE=y
 # CONFIG_PVR_BUILD_DEBUG is not set
@@ -2192,6 +2210,7 @@ CONFIG_FB_MODE_HELPERS=y
 # CONFIG_FB_TMIO is not set
 CONFIG_FB_S3C=y
 CONFIG_FB_MIPI_DSIM=y
+# CONFIG_FB_MIPI_DSIM_DBG is not set
 # CONFIG_FB_I80_COMMAND_MODE is not set
 CONFIG_FB_S5P_MDNIE=y
 # CONFIG_S5P_MDNIE_PWM is not set
@@ -2371,6 +2390,7 @@ CONFIG_HID_GREENASIA=y
 # CONFIG_GREENASIA_FF is not set
 CONFIG_HID_SMARTJOYPLUS=y
 # CONFIG_SMARTJOYPLUS_FF is not set
+# CONFIG_HID_SYNAPTICS_BT is not set
 # CONFIG_HID_TIVO is not set
 CONFIG_HID_TOPSEED=y
 CONFIG_HID_THRUSTMASTER=y
@@ -2586,6 +2606,7 @@ CONFIG_USB_GADGET_DUALSPEED=y
 CONFIG_USB_G_ANDROID=y
 CONFIG_USB_ANDROID_SAMSUNG_COMPOSITE=y
 # CONFIG_USB_ANDROID_SAMSUNG_MTP is not set
+# CONFIG_USB_RNDIS_MULTI_PACKET is not set
 CONFIG_USB_DUN_SUPPORT=y
 # CONFIG_USB_CDC_COMPOSITE is not set
 # CONFIG_USB_G_NOKIA is not set
@@ -2620,6 +2641,8 @@ CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_SDIO_UART is not set
 # CONFIG_MMC_TEST is not set
 CONFIG_MMC_SUPPORT_BKOPS_MODE=y
+CONFIG_MMC_BKOPS_NODE_UID=0
+CONFIG_MMC_BKOPS_NODE_GID=0
 
 #
 # MMC/SD/SDIO Host Controller Drivers
@@ -2783,16 +2806,19 @@ CONFIG_STAGING=y
 # CONFIG_PRISM2_USB is not set
 # CONFIG_ECHO is not set
 # CONFIG_ASUS_OLED is not set
+# CONFIG_RTLLIB is not set
 # CONFIG_R8712U is not set
 # CONFIG_RTS5139 is not set
 # CONFIG_TRANZPORT is not set
 # CONFIG_LINE6_USB is not set
 # CONFIG_USB_SERIAL_QUATECH2 is not set
 # CONFIG_USB_SERIAL_QUATECH_USB2 is not set
+# CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
 # CONFIG_ZRAM is not set
 CONFIG_ZSMALLOC=y
 # CONFIG_FB_SM7XX is not set
+# CONFIG_USB_ENESTORAGE is not set
 # CONFIG_BCM_WIMAX is not set
 # CONFIG_FT1000 is not set
 
@@ -2910,6 +2936,7 @@ CONFIG_IR_REMOCON_FPGA=y
 #
 # File systems
 #
+CONFIG_LOW_ORDER_SEQ_MALLOC=y
 CONFIG_EXT2_FS=y
 CONFIG_EXT2_FS_XATTR=y
 # CONFIG_EXT2_FS_POSIX_ACL is not set
@@ -2963,6 +2990,7 @@ CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
+CONFIG_EXFAT_FS=y
 # CONFIG_NTFS_FS is not set
 
 #
@@ -3079,7 +3107,6 @@ CONFIG_BOOTPARAM_HUNG_TASK_PANIC_VALUE=1
 CONFIG_SCHEDSTATS=y
 # CONFIG_TIMER_STATS is not set
 # CONFIG_DEBUG_OBJECTS is not set
-# CONFIG_SLUB_DEBUG_ON is not set
 # CONFIG_SLUB_STATS is not set
 # CONFIG_DEBUG_KMEMLEAK is not set
 # CONFIG_DEBUG_PREEMPT is not set
@@ -3204,6 +3231,7 @@ CONFIG_CRYPTO_MANAGER_DISABLE_TESTS=y
 CONFIG_CRYPTO_WORKQUEUE=y
 # CONFIG_CRYPTO_CRYPTD is not set
 CONFIG_CRYPTO_AUTHENC=y
+# CONFIG_CRYPTO_TEST is not set
 
 #
 # Authenticated Encryption with Associated Data
@@ -3243,6 +3271,7 @@ CONFIG_CRYPTO_MD5=y
 # CONFIG_CRYPTO_RMD256 is not set
 # CONFIG_CRYPTO_RMD320 is not set
 CONFIG_CRYPTO_SHA1=y
+# CONFIG_CRYPTO_SHA1_ARM is not set
 CONFIG_CRYPTO_SHA256=y
 # CONFIG_CRYPTO_SHA512 is not set
 # CONFIG_CRYPTO_TGR192 is not set
@@ -3252,6 +3281,7 @@ CONFIG_CRYPTO_SHA256=y
 # Ciphers
 #
 CONFIG_CRYPTO_AES=y
+# CONFIG_CRYPTO_AES_ARM is not set
 # CONFIG_CRYPTO_ANUBIS is not set
 CONFIG_CRYPTO_ARC4=y
 # CONFIG_CRYPTO_BLOWFISH is not set
