--- a/fs/exfat/Kconfig
+++ b/fs/exfat/Kconfig
@@ -1,8 +1,8 @@
 config EXFAT_FS
-	tristate
+	tristate "Microsoft exFat FileSystem"
 	default y
 	select NLS
 	select NLS_UTF8
 	help
 	  If you want to use the exFAT file systems, then you must say Y or M here
-	  to inlucde exFAT support. 
+	  to include exFAT support. 
