Revert "exfat: remove built-in old exfat source"
This reverts commit 964f0c0401a68eb88476f1c9153112f5bf690d97.

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -151,4 +151,4 @@ obj-$(CONFIG_IR_REMOCON_MC96)		+= irda/
 
 obj-$(CONFIG_FELICA) += felica/
 
-obj-$(CONFIG_EXFAT_FS)	+= exfat/
+obj-y 				+= exfat/
