Revert "exfat: make all built-in"
This reverts commit a0c9c61251298d9157b98e119125e36017a3ffe9.

--- a/fs/exfat/Kconfig
+++ b/fs/exfat/Kconfig
@@ -1,8 +1,8 @@
 config EXFAT_FS
-	tristate "Microsoft exFat FileSystem"
+	tristate
 	default y
 	select NLS
 	select NLS_UTF8
 	help
 	  If you want to use the exFAT file systems, then you must say Y or M here
-	  to include exFAT support. 
+	  to inlucde exFAT support. 
